implemented api key, commons module, reading from env vars